# time-multimodal

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.yaml
data/scrpit/: convert_to_mdb.py  extract_tabpfn_features.py
docs/: embedding_validation_report.md  implementation_plan.md  lmdb_determinism_report.md  mps_determinism_report.md  pipeline.md  split_validation_report.md
notebooks/: 01_data_exploration.ipynb  02_tabpfn_nan_check.ipynb
scripts/: convert_to_mdb.py  create_splits_5fold.py  extract_radjepa_embeddings.py  extract_tabpfn_embeddings.py  extract_tabpfn_features.py  get_xray.py  test_embedding_cache.py  test_lmdb_determinism.py  validate_splits.py
src/: config.py
src/data/: __init__.py  dataset.py  embedding_cache.py
src/utils/: __init__.py  set_seeds.py
