[project]
name = "time-multimodal"
version = "0.1.0"
description = "Multimodal mortality prediction using chest X-ray (RadJEPA) and tabular clinical data (TabPFN v2) embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.8",
    "pandas>=2.0,<3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.0,<1.7",
    "seaborn>=0.13.2",
    "tabpfn>=2.0",
    "tabpfn-extensions>=0.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.40.0",
    "tqdm>=4.67.3",
    "timm>=1.0.25",
]
